feat: cookiecutter template for C projects

--- a/{{cookiecutter.project_slut}}/compose.yml
+++ b/{{cookiecutter.project_slut}}/compose.yml
@@ -1,17 +1,23 @@
 services:
-  {{ cookiecutter.project_slut }}:
-    container_name: {{ cookiecutter.project_slut }}
+  {{ cookiecutter.project_slut }}-devenv:
+    container_name: {{ cookiecutter.project_slut }}-devenv
     build:
-      context: .
+      context: .devenv/
       dockerfile: Dockerfile
       args:
         USER_ID: ${USER_ID:-0}
         GROUP_ID: ${GROUP_ID:-0}
         USER_NAME: ${USER_NAME}
-        {% for arg in cookiecutter.docker_args["array"] %}{{ arg }} : {{'${'}}{{ arg }}{{'}'}}
-        {% endfor %}
+        DOTFILES_REPO: ${DOTFILES_REPO}
+        DOTFILES_BRANCH: ${DOTFILES_BRANCH}
     stdin_open: true
     tty: true
     volumes:
       - ${PWD}/:/home/${USER_NAME}/project
       - ${HOME}/.ssh/:/home/${USER_NAME}/.ssh:ro
+    {% if cookiecutter.env_vars["array"] | length != 0 -%}
+    environment:
+      {% for env in cookiecutter.env_vars["array"] -%}
+      - {{ env }}: {{'${'}}{{ env }}{{'}'}}
+      {% endfor -%}
+    {%- endif -%}
